<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juli.hangman.PantallaJuego"
    android:background="#ffffff">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:id="@+id/frameLayout"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="295dp"
            android:layout_height="245dp"
            android:id="@+id/imagen"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@string/resourse"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:weightSum="1"
            android:id="@+id/layoutAgregarLetra">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fallidas"
                    android:id="@+id/lblFallidas"
                    android:textColor="#b60404"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/elegir_letra"
                android:id="@+id/lblElegirLetra"
                android:textColor="#000000"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_gravity="center">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:id="@+id/button17"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:id="@+id/button18"
                    android:onClick="clickBotonOK"
                    android:nestedScrollingEnabled="false" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/e"
                    android:id="@+id/button20"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/l"
                    android:id="@+id/button21"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/u"
                    android:id="@+id/button22"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/n"
                    android:id="@+id/button23"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/g"
                    android:id="@+id/button24"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/h"
                    android:id="@+id/button25"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/o"
                    android:id="@+id/button26"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/m"
                    android:id="@+id/button19"
                    android:onClick="clickBotonOK" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_gravity="center">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/b"
                    android:id="@+id/button2"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/r"
                    android:id="@+id/button3"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/v"
                    android:id="@+id/button4"
                    android:layout_weight="0.43"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/p"
                    android:id="@+id/button5"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/t"
                    android:id="@+id/button6"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/f"
                    android:id="@+id/button7"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/s"
                    android:id="@+id/button8"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/d"
                    android:id="@+id/button9"
                    android:onClick="clickBotonOK" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/i"
                    android:id="@+id/button10"
                    android:onClick="clickBotonOK" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/layoutLetras"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/guion"
                android:id="@+id/letra1"
                android:textColor="#010101"
                android:layout_marginRight="5dp"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/guion"
                android:id="@+id/letra2"
                android:textColor="#010101"
                android:layout_marginRight="5dp"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/guion"
                android:id="@+id/letra3"
                android:textColor="#010101"
                android:layout_marginRight="5dp"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/guion"
                android:id="@+id/letra4"
                android:textColor="#010101"
                android:layout_marginRight="5dp"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/guion"
                android:id="@+id/letra5"
                android:textColor="#010101"
                android:layout_marginRight="5dp"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/guion"
                android:id="@+id/letra6"
                android:textColor="#010101"
                android:textSize="30sp" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSonido"
            android:layout_gravity="right|top"
            android:background="@drawable/sonido_on"
            android:contentDescription="sonido"
            android:onClick="musica" />

    </FrameLayout>

</RelativeLayout>
