<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juli.hangman.PantallaFinal"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/findejuego"
        android:id="@+id/titulofinal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:textSize="50sp"
        android:textColor="#ff951c" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/puntaje"
        android:id="@+id/txtPuntaje"
        android:layout_below="@+id/titulofinal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:textColor="#fecc1b" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volverajugar"
        android:id="@+id/btnSeguirJugando"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button3d"
        android:onClick="volverAJugar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminar"
        android:id="@+id/btnTerminar"
        android:layout_below="@+id/btnSeguirJugando"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button3d"
        android:layout_marginTop="20dp"
        android:onClick="terminarJuego" />
</RelativeLayout>
