<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:components="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juli.hangman.MainActivity"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tituloinicio"
            android:id="@+id/tituloinicio"
            android:layout_marginTop="54dp"
            android:textSize="45sp"
            android:textColor="#ff951c"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/play"
                android:id="@+id/button"
                android:layout_marginTop="20dp"
                android:textColor="#ffffff"
                android:background="@drawable/button"
                android:onClick="empezarJuegoUnJugador"
                android:textSize="10sp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:text="@string/salida"
                android:id="@+id/button11"
                android:layout_marginTop="20dp"
                android:textColor="#ffffff"
                android:background="@drawable/button"
                android:onClick="salirDelJuego"
                android:textSize="10sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <com.example.juli.hangman.GIFView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        components:src="@drawable/baile" />

    </LinearLayout>


</RelativeLayout>
